--- a/Mascotte Serveur/Mascotte Serveur/Mascotte Serveur.csproj
+++ b/Mascotte Serveur/Mascotte Serveur/Mascotte Serveur.csproj
@@ -67,6 +67,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NetDevices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
