--- a/Mascotte/RobotControl/RobotControl.csproj
+++ b/Mascotte/RobotControl/RobotControl.csproj
@@ -33,7 +33,7 @@
   <Import Project="$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets" />
   <ItemGroup>
     <Compile Include="ForwardBehaviour.cs" />
-    <Compile Include="IBehaviour.cs" />
+    <Compile Include="Behaviours.cs" />
     <Compile Include="Motor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
