--- a/Mascotte/RobotControl/RobotControl.csproj
+++ b/Mascotte/RobotControl/RobotControl.csproj
@@ -32,15 +32,20 @@
   </PropertyGroup>
   <Import Project="$(NetMfTargetsBaseDir)$(TargetFrameworkVersion)\CSharp.Targets" />
   <ItemGroup>
+    <Compile Include="Algorythms.cs" />
     <Compile Include="ForwardBehaviour.cs" />
     <Compile Include="Behaviours.cs" />
     <Compile Include="Motor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="RangeSensor.cs" />
-    <Compile Include="ReverseBehaviour.cs" />
+    <Compile Include="ReverseBehaviour.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Rover.cs" />
-    <Compile Include="TurnRightBehaviour.cs" />
+    <Compile Include="TurnRightBehaviour.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.SPOT.Hardware" />
