--- a/Mascotte/Tests/Tests.csproj
+++ b/Mascotte/Tests/Tests.csproj
@@ -42,7 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="GeneralMapTests.cs" />
+    <Compile Include="MiniGridTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
