--- a/Mascotte/Mascotte/Mascotte.csproj
+++ b/Mascotte/Mascotte/Mascotte.csproj
@@ -56,6 +56,7 @@
     </ApplicationDefinition>
     <Compile Include="GridMaker\GeneralMap.cs" />
     <Compile Include="SendObjectManager.cs" />
+    <Compile Include="Server.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
