--- a/Mascotte/RobotControl/RobotControl.csproj
+++ b/Mascotte/RobotControl/RobotControl.csproj
@@ -49,6 +49,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="AngrySquirrel.Netduino.ProximitySensor">
+      <HintPath>..\packages\AngrySquirrel.Netduino.ProximitySensor.1.0.0.0\lib\netmf42\AngrySquirrel.Netduino.ProximitySensor.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.SPOT.Hardware" />
     <Reference Include="Microsoft.SPOT.Hardware.PWM" />
     <Reference Include="Microsoft.SPOT.Hardware.SerialPort" />
@@ -57,5 +60,8 @@
     <Reference Include="SecretLabs.NETMF.Hardware" />
     <Reference Include="SecretLabs.NETMF.Hardware.Netduino" />
     <Reference Include="System" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
