--- a/Mascotte/Tests/Tests.csproj
+++ b/Mascotte/Tests/Tests.csproj
@@ -35,6 +35,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EnvironmentTests.cs" />
     <Compile Include="GeneralMapTests.cs" />
     <Compile Include="MiniGridTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
