client connection in mock interface

--- a/Mascotte/RobotApplication/RobotApplication.csproj
+++ b/Mascotte/RobotApplication/RobotApplication.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientConnection.cs" />
     <Compile Include="ConfigurationWindow.cs">
       <SubType>Form</SubType>
     </Compile>
