--- a/Mascotte/RobotApplication/RobotApplication.csproj
+++ b/Mascotte/RobotApplication/RobotApplication.csproj
@@ -56,6 +56,12 @@
     <Compile Include="ErrorWindow.Designer.cs">
       <DependentUpon>ErrorWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="ObstaclesMapDraw.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ObstaclesMapDraw.Designer.cs">
+      <DependentUpon>ObstaclesMapDraw.cs</DependentUpon>
+    </Compile>
     <Compile Include="RobotMockApp.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,6 +75,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ErrorWindow.resx">
       <DependentUpon>ErrorWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ObstaclesMapDraw.resx">
+      <DependentUpon>ObstaclesMapDraw.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="RobotMockApp.resx">
       <DependentUpon>RobotMockApp.cs</DependentUpon>
